--- a/web/style.css
+++ b/web/style.css
@@ -5,40 +5,90 @@
     list-style-type: none;
     box-sizing: border-box;
 }
+
+.main-container{
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+}
+
+.heading{
+    display: flex;
+    justify-content: center;
+    padding-top: 120px;
+    padding-bottom: 60px;
+}
+.heading img{
+    width: auto;
+    height: 45px;
+    margin: 0 10px;
+}
+.heading h1{
+    margin: 0;
+    color: white;
+    text-transform: uppercase;
+    font-size: 40px;
+    letter-spacing: 6px;
+}
+.heading h1 sub{
+    margin: 0;
+    color: white;
+    text-transform: uppercase;
+    font-size: 20px;
+    letter-spacing: 6px;
+}
+
 .container{
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    background-color: lightgray;
 }
+
 .search {
     position: relative;
-    width: 300px;
+    width: 350px;
 }
 .search-input {
     width: 100%;
-    border: 1px solid #ccc;
+    border: 1px solid white;
     border-radius: 100px;
-    /* padding: 10px 100px 10px 20px;  */
     padding: 15px 15px 15px 15px; 
-    /* padding: 20px 20px; */
     line-height: 1;
     box-sizing: border-box;
     outline: none;
 }
 .search-button {
+    margin: 0;
     position: absolute;
     right: 3px; 
     top: 3px;
     bottom: 3px;
     border: 0;
     background: orangered;
-    color: #fff;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
     outline: none;
     margin: 0;
     padding: 0 30px;
     border-radius: 100px;
     z-index: 2;
+}
+.search-button:hover{
+    cursor:pointer;
+    background-color: black;
+    color: white
+}
+
+.desc{
+    padding-top: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.desc p{
+    margin: 0;
+    color: white;
+    font-size: 16px;
 }
