--- a/web/style.css
+++ b/web/style.css
@@ -88,6 +88,10 @@
     align-items: center;
     text-align: center;
 }
+.desc span{
+    color: red;
+    font-size: 16px;
+}
 .desc p{
     color: white;
     font-size: 16px;
